[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/mk_level/sprites/MK_Boss/Big_MK_BOSS.png" type="Texture" id=1]
[ext_resource path="res://assets/code/MK_Level/MK_Boss.gd" type="Script" id=2]
[ext_resource path="res://assets/sprite_scenes/mk_scenes/MK_Boss_Laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprite_scenes/mk_scenes/Aim_Laser.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1253.85
height = 7326.52

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 328.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.00002
height = 306.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 100.0
height = 328.0

[node name="MK_Boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -100 )
rotation = 1.5708
scale = Vector2( 0.054233, -0.0504361 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 0, -175 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Dmg_Player" type="Area2D" parent="."]
collision_layer = 0

[node name="Dmg_Player_Area" type="CollisionShape2D" parent="Dmg_Player"]
position = Vector2( 0, -100 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="MK_Boss_Laser1" parent="." instance=ExtResource( 3 )]
position = Vector2( -228.983, -98.4189 )

[node name="MK_Boss_Laser2" parent="." instance=ExtResource( 3 )]
position = Vector2( -130.982, -121.197 )

[node name="Aim_Laser1" parent="." instance=ExtResource( 4 )]
position = Vector2( -228.983, -98.4189 )

[node name="Aim_Laser2" parent="." instance=ExtResource( 4 )]
position = Vector2( -130.982, -121.197 )

[node name="Orion_Spawn" type="Node2D" parent="."]
position = Vector2( -657.156, 79.6846 )

[node name="Pisces_Spawn1" type="Node2D" parent="."]
position = Vector2( -333.408, 96.6743 )

[node name="Pisces_Spawn2" type="Node2D" parent="."]
position = Vector2( -636.391, -73.2231 )

[node name="Pisces_Spawn3" type="Node2D" parent="."]
position = Vector2( -434.402, -93.0444 )

[node name="Taurus_Spawn" type="Node2D" parent="."]
position = Vector2( -16.2657, 215.602 )
